fix:(temp fix) visual responsiveness on small screen

--- a/app/public/css/eventPage.css
+++ b/app/public/css/eventPage.css
@@ -167,6 +167,9 @@ body {
     grid-row-start: 10;
 }
 @media screen and (max-width: 700px) {
+    * {
+        overflow: hidden;
+    }
     .promoBox {
         margin-top: 10%;
     }
